@@ -94,9 +94,10 @@ flumotion/Makefile
 flumotion/test/Makefile
 flumotion/component/Makefile
 flumotion/component/encoders/Makefile
-flumotion/component/encoders/flv/Makefile
-flumotion/component/encoders/mp3/Makefile
 flumotion/component/encoders/aac/Makefile
+flumotion/component/encoders/mp3/Makefile
+flumotion/component/encoders/flv/Makefile
+flumotion/component/encoders/vp6/Makefile
 flumotion/component/muxers/Makefile
 flumotion/component/muxers/flv/Makefile
 flumotion/component/plugs/Makefile
