@@ -1,9 +1,10 @@
 include $(top_srcdir)/common/python.mk
 
 SUBDIRS = \
+	aac \
 	flv \
 	mp3 \
-	aac
+	vp6
 
 # We do not install __init__.py since it would override flumotion's
 EXTRA_DIST = __init__.py
